# simple_server

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yaml  release.yml  rust.yml
completions/: _simple_server  _simple_server.ps1  simple_server.bash  simple_server.fish
src/: cli.rs  lib.rs  main.rs  server.rs
