[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"
authors = ["sakunia <sakunia@foxmail.com>"]
description = "A simple http server"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
poem = { version = "1.3.54", features = ["static-files"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
clap_complete = "4.1.1"
