[package]
name = "simple_server"
version = "0.2.1"
edition = "2021"
authors = ["sakunia <sakunia@foxmail.com>"]
description = "A simple http server"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
poem = { version = "3.0.4", features = ["static-files", "compression"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"

[profile.release]
lto = true
opt-level = 'z'
strip = true
panic = 'abort'
codegen-units = 1
debug = false
